--- a/34_10th March assignment/Statistics Advance Assignment.ipynb
+++ b/34_10th March assignment/Statistics Advance Assignment.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "44b553d7",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "18d22af8",
    "metadata": {},
    "outputs": [
@@ -340,25 +340,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-test statistic:  -5.343054150859085\n",
-      "p-value:  5.946520011746512e-07\n"
+      "Reject the null hypothesis. The p-value is 0.001 < 0.050.\n",
+      "The t-statistic is -5.000 and the p-value is 0.001.\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "from scipy.stats import ttest_ind\n",
+    "from scipy.stats import t\n",
     "\n",
-    "# Generate two random samples\n",
-    "sample1 = np.random.normal(10, 2, 50)  # Mean of 10, standard deviation of 2, 50 samples\n",
-    "sample2 = np.random.normal(12, 2, 50)  # Mean of 12, standard deviation of 2, 50 samples\n",
+    "def two_sample_ttest(sample1, sample2, alpha=0.05):\n",
+    "    \"\"\"\n",
+    "    Calculates the two-sample t-test for independent samples.\n",
     "\n",
-    "# Calculate the t-test statistic and p-value\n",
-    "t_stat, p_value = ttest_ind(sample1, sample2)\n",
+    "    Parameters:\n",
+    "    sample1 (array-like): The first sample.\n",
+    "    sample2 (array-like): The second sample.\n",
+    "    alpha (float): The significance level for the test. Default is 0.05.\n",
+    "\n",
+    "    Returns:\n",
+    "    t_stat (float): The t-statistic for the test.\n",
+    "    p_val (float): The p-value for the test.\n",
+    "    \"\"\"\n",
+    "    # Calculate the mean and standard deviation of each sample\n",
+    "    x1 = np.mean(sample1)\n",
+    "    x2 = np.mean(sample2)\n",
+    "    s1 = np.std(sample1, ddof=1)\n",
+    "    s2 = np.std(sample2, ddof=1)\n",
+    "\n",
+    "    # Calculate the standard error of the difference in means\n",
+    "    se = np.sqrt((s1**2 + s2**2) / len(sample1))\n",
+    "\n",
+    "    # Calculate the t-statistic\n",
+    "    t_stat = (x1 - x2) / se\n",
+    "\n",
+    "    # Calculate the degrees of freedom\n",
+    "    df = len(sample1) + len(sample2) - 2\n",
+    "\n",
+    "    # Calculate the p-value\n",
+    "    p_val = (1 - t.cdf(abs(t_stat), df)) * 2\n",
+    "\n",
+    "    # Determine if the test is significant\n",
+    "    if p_val < alpha:\n",
+    "        print(f\"Reject the null hypothesis. The p-value is {p_val:.3f} < {alpha:.3f}.\")\n",
+    "    else:\n",
+    "        print(f\"Fail to reject the null hypothesis. The p-value is {p_val:.3f} >= {alpha:.3f}.\")\n",
+    "\n",
+    "    return t_stat, p_val\n",
+    "\n",
+    "\n",
+    "# Define the two samples\n",
+    "sample1 = [1, 2, 3, 4, 5]\n",
+    "sample2 = [6, 7, 8, 9, 10]\n",
+    "\n",
+    "# Calculate the two-sample t-test\n",
+    "t_stat, p_val = two_sample_ttest(sample1, sample2)\n",
     "\n",
     "# Print the results\n",
-    "print(\"t-test statistic: \", t_stat)\n",
-    "print(\"p-value: \", p_value)"
+    "print(f\"The t-statistic is {t_stat:.3f} and the p-value is {p_val:.3f}.\")"
    ]
   },
   {
