--- a/42_18th March assignment/Feature Engineering Assignment.ipynb
+++ b/42_18th March assignment/Feature Engineering Assignment.ipynb
@@ -1,1 +1,213 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "e31c13bf",
+   "metadata": {},
+   "source": [
+    "# Q1. What is the Filter method in feature selection, and how does it work?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "In machine learning, feature selection is a technique that involves selecting a subset of relevant features or variables from a dataset to improve model performance and reduce overfitting. The __filter method is__ one of the most commonly used techniques for feature selection.\n",
+    "\n",
+    "The __filter method works by__ ranking the features in the dataset based on some statistical measure of their relevance to the target variable. This measure could be a correlation coefficient, mutual information, chi-squared statistic, or any other appropriate measure of association. The higher the value of the statistical measure, the more relevant the feature is considered to be.\n",
+    "\n",
+    "Once the features are ranked, a threshold is set to select the top k features, where k is determined based on some criteria such as the number of features required for a certain level of model accuracy or the computational complexity of the model. The selected features are then used to train the machine learning model.\n",
+    "\n",
+    "The filter method is computationally efficient and works well when there is a large number of features in the dataset. However, it does not consider the interaction between features and may not be able to select the most relevant subset of features for complex models. Therefore, it is often used in combination with other feature selection techniques such as wrapper and embedded methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fdda94d",
+   "metadata": {},
+   "source": [
+    "# Q2. How does the Wrapper method differ from the Filter method in feature selection?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "The wrapper method is another commonly used technique for feature selection in machine learning, and it differs from the filter method in a few ways:\n",
+    "\n",
+    "__1. Search strategy:__ The wrapper method evaluates different subsets of features by training and evaluating the machine learning model on each subset. In contrast, the filter method ranks each feature independently based on its relevance to the target variable.\n",
+    "\n",
+    "__2. Use of model performance:__ The wrapper method uses the performance of the machine learning model as a criterion for selecting the best subset of features. It trains and evaluates the model on each subset of features, and selects the subset that yields the best performance on a validation set. In contrast, the filter method uses a statistical measure of association to rank the features and selects the top k features based on a pre-defined threshold.\n",
+    "\n",
+    "__3. Computational complexity:__ The wrapper method is computationally expensive because it trains and evaluates the machine learning model on each subset of features. In contrast, the filter method is computationally efficient because it ranks each feature independently based on a statistical measure of association.\n",
+    "\n",
+    "__4. Interaction between features:__ The wrapper method can capture the interaction between features by evaluating different subsets of features. In contrast, the filter method does not consider the interaction between features and may not be able to select the most relevant subset of features for complex models.\n",
+    "\n",
+    "Overall, the wrapper method can be more effective than the filter method when selecting a subset of features for a machine learning model. However, it can also be computationally expensive and may overfit the model to the training data if the subset of features is not carefully selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f095948",
+   "metadata": {},
+   "source": [
+    "# Q3. What are some common techniques used in Embedded feature selection methods?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Embedded feature selection methods are techniques that perform feature selection during the training process of a machine learning algorithm. The selected features are then used to train the model. Some common techniques used in embedded feature selection methods include:\n",
+    "\n",
+    "__1. Lasso regression:__ Lasso regression is a linear regression technique that adds a penalty term to the regression equation to enforce sparsity in the model. This penalty term shrinks the coefficients of irrelevant features towards zero, effectively removing them from the model.\n",
+    "\n",
+    "__2. Ridge regression:__ Ridge regression is a linear regression technique that adds a penalty term to the regression equation to prevent overfitting. This penalty term shrinks the coefficients of correlated features towards each other, effectively reducing the impact of redundant features on the model.\n",
+    "\n",
+    "__3. Decision trees:__ Decision trees are a non-parametric machine learning technique that builds a tree-like model of decisions and their possible consequences. The tree is built by recursively splitting the data into subsets based on the most informative feature. The importance of each feature is measured by how much it reduces the impurity of the subsets.\n",
+    "\n",
+    "__4. Random forests:__ Random forests are an ensemble learning method that combines multiple decision trees to improve the accuracy and stability of the model. The random forest algorithm builds multiple decision trees on different subsets of the data and features, and the final prediction is the average of the predictions of the individual trees. The importance of each feature is measured by how much it reduces the variance of the ensemble.\n",
+    "\n",
+    "__5. Gradient boosting:__ Gradient boosting is another ensemble learning method that combines multiple weak learners (e.g., decision trees) to create a strong learner. The gradient boosting algorithm trains each weak learner on the residual errors of the previous learner, and the final prediction is the sum of the predictions of all the learners. The importance of each feature is measured by how much it contributes to the reduction of the loss function.\n",
+    "\n",
+    "These techniques can be very effective in selecting relevant features and improving the performance of the model. However, they can also be computationally expensive and require careful tuning of hyperparameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66f17b18",
+   "metadata": {},
+   "source": [
+    "# Q4. What are some drawbacks of using the Filter method for feature selection?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "While the filter method is a popular and effective technique for feature selection, it also has some drawbacks that should be considered:\n",
+    "\n",
+    "__1. Lack of consideration for feature interactions:__ The filter method evaluates each feature independently of the others, and thus, does not take into account potential interactions between features. This can result in suboptimal feature subsets for models that require feature interactions.\n",
+    "\n",
+    "__2. Selection of redundant features:__ The filter method may select multiple features that are highly correlated with each other, resulting in redundant information being included in the model. This can lead to overfitting and reduced generalization performance.\n",
+    "\n",
+    "__3. Dependency on the chosen statistical measure:__ The filter method relies on a chosen statistical measure, such as correlation or mutual information, to rank the features. The effectiveness of the selected measure may vary depending on the characteristics of the dataset and the problem at hand.\n",
+    "\n",
+    "__4. Fixed feature set:__ The filter method selects a fixed subset of features before training the model, and the same subset is used for all instances. This can result in a suboptimal feature set if the relevance of features changes across different instances.\n",
+    "\n",
+    "__5. Inability to handle nonlinear relationships:__ The filter method assumes a linear relationship between the features and the target variable. This can be limiting for models that require nonlinear relationships between features and the target variable.\n",
+    "\n",
+    "In summary, the filter method can be a powerful tool for feature selection, but it also has limitations that should be considered. Other techniques, such as wrapper and embedded methods, may be more appropriate depending on the specific problem and data at hand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d75a213",
+   "metadata": {},
+   "source": [
+    "# Q5. In which situations would you prefer using the Filter method over the Wrapper method for feature selection?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "The choice of feature selection method depends on several factors, including the dataset characteristics, the machine learning algorithm being used, and the specific problem being addressed. While the wrapper method is often considered more effective than the filter method, there are situations where the filter method may be preferred. Some situations where the filter method may be more appropriate include:\n",
+    "\n",
+    "__1. High-dimensional datasets:__ The filter method can efficiently handle high-dimensional datasets with a large number of features, while the wrapper method may become computationally infeasible.\n",
+    "\n",
+    "__2. Linear models:__ The filter method may be more appropriate for linear models, as it assumes a linear relationship between features and the target variable. In contrast, the wrapper method can overfit nonlinear relationships, leading to poor performance on new data.\n",
+    "\n",
+    "__3. Preprocessing step:__ The filter method is often used as a preprocessing step to reduce the number of features in the dataset before applying more computationally expensive feature selection techniques, such as wrapper methods.\n",
+    "\n",
+    "__4. Exploration of feature relevance:__ The filter method can be used to explore the relevance of individual features to the target variable, providing insights into the underlying relationships in the data. This can be useful in exploratory data analysis or to generate hypotheses for further investigation.\n",
+    "\n",
+    "In summary, the filter method can be a useful tool for feature selection in specific situations. However, it is important to consider the limitations of the method and to carefully evaluate the performance of the resulting model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc9fed60",
+   "metadata": {},
+   "source": [
+    "# Q6. In a telecom company, you are working on a project to develop a predictive model for customer churn. You are unsure of which features to include in the model because the dataset contains several different ones. Describe how you would choose the most pertinent attributes for the model using the Filter Method.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "In order to choose the most pertinent attributes for a predictive model for customer churn in a telecom company using the filter method, the following steps can be taken:\n",
+    "\n",
+    "__1. Identify the relevant features:__ Identify all the features in the dataset that may be relevant for predicting customer churn. This could include features such as demographic information, usage patterns, customer service interactions, and billing information.\n",
+    "\n",
+    "__2. Preprocess the data:__ Preprocess the data to handle missing values, outliers, and data normalization, as these can impact the effectiveness of the filter method.\n",
+    "\n",
+    "__3. Choose a statistical measure:__ Choose a statistical measure that is appropriate for the data and problem at hand. For example, if the dataset contains categorical features, mutual information or chi-square test could be used. If the dataset contains continuous features, correlation coefficient could be used.\n",
+    "\n",
+    "__4. Rank the features:__ Use the chosen statistical measure to rank the features in the dataset based on their relevance to the target variable (churn). The ranking can be done in descending order, with the most relevant feature at the top.\n",
+    "\n",
+    "__5. Choose the subset of features:__ Select the subset of features that are deemed most relevant for predicting customer churn. This can be done by setting a threshold value on the ranked features and selecting the top K features. Alternatively, feature selection algorithms such as Recursive Feature Elimination (RFE) can be used to automate the selection process.\n",
+    "\n",
+    "__6. Train and evaluate the model:__ Train the machine learning model using the selected subset of features and evaluate its performance on a hold-out dataset using appropriate metrics such as accuracy, precision, recall, F1 score, and ROC AUC. If the performance is satisfactory, the model can be deployed for customer churn prediction.\n",
+    "\n",
+    "In summary, the filter method can be used to select the most pertinent attributes for a predictive model for customer churn in a telecom company. The effectiveness of the selected features can be further evaluated using appropriate evaluation metrics to ensure that the resulting model is accurate and generalizable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd41773",
+   "metadata": {},
+   "source": [
+    "# Q7. You are working on a project to predict the outcome of a soccer match. You have a large dataset with many features, including player statistics and team rankings. Explain how you would use the Embedded method to select the most relevant features for the model.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To use the Embedded method for feature selection in a soccer match outcome prediction project, the following steps can be taken:\n",
+    "\n",
+    "__1. Preprocess the data:__ Preprocess the data to handle missing values, outliers, and data normalization, as these can impact the effectiveness of the Embedded method.\n",
+    "\n",
+    "__2. Choose a machine learning algorithm:__ Choose a machine learning algorithm that supports Embedded feature selection, such as Lasso or Ridge regression.\n",
+    "\n",
+    "__3. Train the model:__ Train the model on the entire dataset using the chosen algorithm and set the regularization parameter that controls the strength of the penalty term.\n",
+    "\n",
+    "__4. Feature selection:__ As the model is being trained, the algorithm will automatically select the most relevant features and assign them non-zero coefficients. Features with zero coefficients are deemed irrelevant for the model and are effectively eliminated from the model.\n",
+    "\n",
+    "__5. Model evaluation:__ Evaluate the performance of the model using appropriate metrics such as accuracy, precision, recall, F1 score, and ROC AUC. If the performance is satisfactory, the model can be deployed for soccer match outcome prediction.\n",
+    "\n",
+    "It is important to note that the strength of the penalty term should be carefully tuned to balance the trade-off between model complexity and prediction accuracy. A too strong penalty term may lead to too many irrelevant features being excluded, while a too weak penalty term may result in overfitting.\n",
+    "\n",
+    "In summary, the Embedded method can be used to select the most relevant features for a soccer match outcome prediction model. It eliminates irrelevant features while training the model and is particularly useful when the number of features is large, and feature selection is computationally expensive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "428561f6",
+   "metadata": {},
+   "source": [
+    "# Q8. You are working on a project to predict the price of a house based on its features, such as size, location, and age. You have a limited number of features, and you want to ensure that you select the most important ones for the model. Explain how you would use the Wrapper method to select the best set of features for the predictor.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To use the Wrapper method for feature selection in a project to predict the price of a house based on its features, the following steps can be taken:\n",
+    "\n",
+    "__1. Define a subset of features:__ Define a subset of features that will be used for training the model. This can be done either by expert knowledge or using exploratory data analysis.\n",
+    "\n",
+    "__2. Train the model:__ Train the model using the chosen subset of features, and evaluate its performance using appropriate metrics such as accuracy, RMSE, or R-squared.\n",
+    "\n",
+    "__3. Evaluate the feature subset:__ Evaluate the feature subset by considering the model performance and the number of features. If the model performance is not satisfactory, try adding or removing features and repeating the process until a satisfactory feature subset is obtained.\n",
+    "\n",
+    "__4. Repeat the process:__ Repeat the process by exploring different subsets of features, either by adding or removing features until the best set of features is found. This process can be done using forward selection or backward elimination.\n",
+    "\n",
+    "__5. Model evaluation:__ Evaluate the performance of the model on a hold-out dataset using appropriate metrics such as accuracy, RMSE, or R-squared. If the performance is satisfactory, the model can be deployed for house price prediction.\n",
+    "\n",
+    "It is important to note that the Wrapper method can be computationally expensive as it involves training and evaluating the model multiple times for different feature subsets. Therefore, it is recommended to use this method when the number of features is relatively small.\n",
+    "\n",
+    "In summary, the Wrapper method can be used to select the best set of features for a house price prediction model by exploring different subsets of features and evaluating their impact on the model performance. It ensures that the selected features are most relevant to the target variable and can help improve the accuracy and generalizability of the model."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
