--- a/43_19th March assignment/Feature Engineering Assignment.ipynb
+++ b/43_19th March assignment/Feature Engineering Assignment.ipynb
@@ -1,1 +1,235 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "f2e01d85",
+   "metadata": {},
+   "source": [
+    "# Q1. What is Min-Max scaling, and how is it used in data preprocessing? Provide an example to illustrate its application.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Min-max scaling is a data normalization technique that scales features in a dataset to a fixed range of values between 0 and 1. This is done by subtracting the minimum value of the feature from all values and then dividing the result by the range of the feature (i.e., the difference between the maximum and minimum values).\n",
+    "\n",
+    "The formula for min-max scaling is:\n",
+    "\n",
+    "__x_normalized = (x - min(x)) / (max(x) - min(x))__\n",
+    "\n",
+    "where x is the original value, min(x) is the minimum value in the feature, and max(x) is the maximum value in the feature.\n",
+    "\n",
+    "Min-max scaling is used in data preprocessing to ensure that all features are on the same scale, which is particularly important in machine learning algorithms that are sensitive to the scale of the input data. It is commonly used in image processing, natural language processing, and other domains where feature scaling is important.\n",
+    "\n",
+    "For example, suppose we have a dataset containing the heights of individuals in centimeters. The minimum height is 150 cm, and the maximum height is 200 cm. We can apply min-max scaling to the dataset by subtracting 150 from each height and dividing the result by 50 (the range of heights):\n",
+    "\n",
+    "original data:\n",
+    "__170, 180, 160, 190, 200, 150__\n",
+    "\n",
+    "min-max scaled data:\n",
+    "__0.4, 0.8, 0.0, 1.0, 1.0, 0.0__\n",
+    "\n",
+    "As you can see, the scaled data now falls within the range of 0 to 1, which is a fixed range that is easier to work with in many machine learning algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99992037",
+   "metadata": {},
+   "source": [
+    "# Q2. What is the Unit Vector technique in feature scaling, and how does it differ from Min-Max scaling? Provide an example to illustrate its application.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "The Unit Vector technique in feature scaling, also known as \"normalization,\" involves scaling the features so that each feature has a unit norm (i.e., magnitude of 1). This is done by dividing each feature value by the Euclidean norm of the feature vector.\n",
+    "\n",
+    "Mathematically, for a feature vector x, the normalized feature vector, x_norm, is given by:<br>\n",
+    "__x_norm = x / ||x||__\n",
+    "\n",
+    "where ||x|| is the Euclidean norm of x.\n",
+    "\n",
+    "In contrast, Min-Max scaling involves scaling the features so that they fall within a specified range, usually between 0 and 1. This is done by subtracting the minimum value of the feature from each value and then dividing by the range of the feature.\n",
+    "\n",
+    "Mathematically, for a feature vector x, the Min-Max scaled feature vector, x_scaled, is given by:<br>\n",
+    "__x_scaled = (x - min(x)) / (max(x) - min(x))__\n",
+    "\n",
+    "The main difference between the Unit Vector technique and Min-Max scaling is the way the features are scaled. While the Unit Vector technique ensures that all features have a magnitude of 1, Min-Max scaling ensures that all features fall within a specified range.\n",
+    "\n",
+    "An example of the application of the Unit Vector technique is in text classification, where documents are represented as feature vectors using techniques such as Bag-of-Words or TF-IDF. In this case, the Unit Vector technique can be used to normalize the feature vectors so that the length of the document (i.e., the number of words) does not affect the similarity between documents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97b283d4",
+   "metadata": {},
+   "source": [
+    "# Q3. What is PCA (Principle Component Analysis), and how is it used in dimensionality reduction? Provide an example to illustrate its application.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "PCA, or Principle Component Analysis, is a statistical technique that is commonly used for dimensionality reduction. The goal of PCA is to identify a lower-dimensional representation of the data that captures as much of the variance in the original data as possible.\n",
+    "\n",
+    "PCA works by identifying the linear combinations of the original features, called principle components, that capture the most variance in the data. These principle components are ordered in terms of their ability to explain the variance in the data, with the first principle component capturing the most variance.\n",
+    "\n",
+    "PCA can be used in dimensionality reduction by selecting a subset of the principle components that capture the majority of the variance in the data. This allows for a lower-dimensional representation of the data that still captures most of the important information.\n",
+    "\n",
+    "An example of the application of PCA is in image processing. Images are typically represented as high-dimensional feature vectors, with each pixel being a separate feature. However, many of these features are redundant, as they may be correlated with other features or may not contain much useful information.\n",
+    "\n",
+    "In this case, PCA can be used to identify a lower-dimensional representation of the image that still captures most of the important information. For example, if the first 50 principle components capture 95% of the variance in the image data, we can use only those 50 components as our new feature representation, rather than the original high-dimensional feature vectors.\n",
+    "\n",
+    "By doing so, we can reduce the dimensionality of the image data, making it easier to process and analyze, while still capturing most of the important information in the image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5289d65",
+   "metadata": {},
+   "source": [
+    "# Q4. What is the relationship between PCA and Feature Extraction, and how can PCA be used for Feature Extraction? Provide an example to illustrate this concept.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "PCA and Feature Extraction are related concepts that are often used together in machine learning and data analysis.\n",
+    "\n",
+    "Feature Extraction involves transforming the raw data into a set of features that can be used for further analysis. This transformation typically involves selecting a subset of the original features or creating new features that better capture the underlying patterns in the data.\n",
+    "\n",
+    "PCA can be used for Feature Extraction by identifying the principle components of the data, which are the linear combinations of the original features that capture the most variance in the data. These principle components can then be used as the new set of features for further analysis.\n",
+    "\n",
+    "For example, let's consider a dataset of images, where each image is represented as a high-dimensional feature vector. The images may contain many redundant features, such as pixels that are highly correlated with each other or do not contain much useful information.\n",
+    "\n",
+    "In this case, we can use PCA to extract a new set of features that capture the most important information in the images. The principle components of the image dataset can be thought of as patterns that are present in the images, such as edges or textures. By using these principle components as the new set of features, we can reduce the dimensionality of the data and extract the most important information from the images.\n",
+    "\n",
+    "This approach can be useful in many applications, such as image classification or object detection, where the high-dimensional feature vectors can be difficult to process and analyze. By using PCA for Feature Extraction, we can extract a new set of features that captures the most important information in the data, making it easier to analyze and build machine learning models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a35c30b",
+   "metadata": {},
+   "source": [
+    "# Q5. You are working on a project to build a recommendation system for a food delivery service. The dataset contains features such as price, rating, and delivery time. Explain how you would use Min-Max scaling to preprocess the data.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Min-Max scaling is a feature scaling technique that is commonly used to scale numerical features in a dataset to a specific range, typically between 0 and 1. This technique is useful when the features have different scales or units and need to be normalized to ensure that they have the same influence on the analysis.\n",
+    "\n",
+    "In the case of a food delivery service recommendation system, we can use Min-Max scaling to preprocess the numerical features such as price, rating, and delivery time to ensure that they are on the same scale and have the same influence on the recommendation algorithm.\n",
+    "\n",
+    "To apply Min-Max scaling to the data, we first need to determine the minimum and maximum values for each feature. We can then use the following formula to scale each feature value to a range between 0 and 1:\n",
+    "\n",
+    "__scaled_value = (value - min_value) / (max_value - min_value)__\n",
+    "\n",
+    "For example, let's say the dataset contains a feature for price that ranges from $5 to $50, a feature for rating that ranges from 1 to 5, and a feature for delivery time that ranges from 20 to 60 minutes. We can apply Min-Max scaling to each of these features as follows:\n",
+    "\n",
+    "* Price:\n",
+    "\n",
+    "  * min_value = 5\n",
+    "  * max_value = 50\n",
+    "  * scaled_price = (price - 5) / (50 - 5)\n",
+    "\n",
+    "* Rating:\n",
+    "\n",
+    "  * min_value = 1\n",
+    "  * max_value = 5\n",
+    "  * scaled_rating = (rating - 1) / (5 - 1)\n",
+    "\n",
+    "* Delivery time:\n",
+    "\n",
+    "  * min_value = 20\n",
+    "  * max_value = 60\n",
+    "  * scaled_delivery_time = (delivery_time - 20) / (60 - 20)\n",
+    "\n",
+    "After applying Min-Max scaling, each feature will be scaled to a range between 0 and 1, making them comparable and easier to analyze. This preprocessing step can improve the performance of the recommendation algorithm by ensuring that each feature has the same influence on the recommendations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0184bb11",
+   "metadata": {},
+   "source": [
+    "# Q6. You are working on a project to build a model to predict stock prices. The dataset contains many features, such as company financial data and market trends. Explain how you would use PCA to reduce the dimensionality of the dataset.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "PCA (Principal Component Analysis) is a commonly used technique in machine learning to reduce the dimensionality of high-dimensional datasets. It works by identifying the principle components of the data, which are linear combinations of the original features that capture the most variance in the data. These principle components can then be used as the new set of features for further analysis, reducing the dimensionality of the dataset while preserving the most important information.\n",
+    "\n",
+    "In the case of a stock price prediction model, the dataset may contain many features, such as company financial data, market trends, and other economic indicators. Some of these features may be redundant or correlated with each other, making it difficult to analyze the data or build an accurate prediction model. In this case, we can use PCA to reduce the dimensionality of the dataset and extract the most important information from the data.\n",
+    "\n",
+    "To use PCA to reduce the dimensionality of the dataset, we first need to standardize the data by subtracting the mean and dividing by the standard deviation. We can then compute the covariance matrix of the data and find the principle components using eigendecomposition. The principle components can be ranked by their corresponding eigenvalues, with the highest eigenvalues representing the components that capture the most variance in the data.\n",
+    "\n",
+    "We can then select the top k principle components that capture a certain percentage of the variance in the data. By selecting a smaller number of principle components, we can reduce the dimensionality of the dataset while preserving most of the important information. These principle components can then be used as the new set of features for further analysis, such as building a stock price prediction model.\n",
+    "\n",
+    "For example, let's say the original dataset contains 50 features, including company financial data, market trends, and other economic indicators. We can use PCA to extract the top 10 principle components that capture 90% of the variance in the data. These 10 principle components can then be used as the new set of features for building a stock price prediction model, reducing the dimensionality of the dataset and improving the performance of the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5c79f5",
+   "metadata": {},
+   "source": [
+    "# Q7. For a dataset containing the following values: [1, 5, 10, 15, 20], perform Min-Max scaling to transform the values to a range of -1 to 1.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To perform Min-Max scaling to transform the values [1, 5, 10, 15, 20] to a range of -1 to 1, we first need to determine the minimum and maximum values in the dataset. In this case, the minimum value is 1 and the maximum value is 20.\n",
+    "\n",
+    "We can then apply the Min-Max scaling formula to each value in the dataset:\n",
+    "\n",
+    "scaled_value = 2 * (value - min_value) / (max_value - min_value) - 1\n",
+    "\n",
+    "Substituting the values, we get:\n",
+    "\n",
+    "scaled_1 = 2 * (1 - 1) / (20 - 1) - 1 = -1<br>\n",
+    "scaled_5 = 2 * (5 - 1) / (20 - 1) - 1 = -0.6<br>\n",
+    "scaled_10 = 2 * (10 - 1) / (20 - 1) - 1 = 0<br>\n",
+    "scaled_15 = 2 * (15 - 1) / (20 - 1) - 1 = 0.6<br>\n",
+    "scaled_20 = 2 * (20 - 1) / (20 - 1) - 1 = 1\n",
+    "\n",
+    "Therefore, the Min-Max scaled values for the dataset [1, 5, 10, 15, 20] to a range of -1 to 1 are [-1, -0.6, 0, 0.6, 1]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64d1feea",
+   "metadata": {},
+   "source": [
+    "# Q8. For a dataset containing the following features: [height, weight, age, gender, blood pressure], perform Feature Extraction using PCA. How many principal components would you choose to retain, and why?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Performing Feature Extraction using PCA involves identifying the principle components that capture the most variance in the data and using them as the new set of features. In this case, the dataset contains five features: height, weight, age, gender, and blood pressure.\n",
+    "\n",
+    "Before applying PCA, we need to preprocess the data by standardizing it to have zero mean and unit variance. We can then compute the covariance matrix of the data and find the principle components using eigendecomposition.\n",
+    "\n",
+    "The number of principal components to retain depends on the percentage of variance we want to preserve in the data. A common rule of thumb is to choose the smallest number of principal components that capture at least 70-80% of the variance in the data.\n",
+    "\n",
+    "To determine the number of principal components to retain for this dataset, we can compute the explained variance ratio for each principle component, which represents the proportion of the total variance in the data that is explained by each component.\n",
+    "\n",
+    "Once we have computed the explained variance ratio for each component, we can plot a scree plot to visualize the proportion of variance explained by each principal component. The scree plot shows a diminishing returns relationship between the number of principal components and the amount of variance explained. We can then choose the number of principal components that capture a high proportion of the variance while avoiding overfitting the data.\n",
+    "\n",
+    "Without any knowledge of the dataset or its characteristics, it is difficult to determine the number of principal components that should be retained. However, as a general guideline, retaining 2-3 principal components may be a good starting point as they would capture the most significant variability in the data.\n",
+    "\n",
+    "Ultimately, the optimal number of principal components to retain depends on the specifics of the dataset and the analysis being performed. It may require some experimentation and evaluation to determine the optimal number of principal components to retain."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
