--- a/44_20th March assignment/Feature Engineering Assignment.ipynb
+++ b/44_20th March assignment/Feature Engineering Assignment.ipynb
@@ -1,1 +1,177 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "45d5e320",
+   "metadata": {},
+   "source": [
+    "# Q1. What is data encoding? How is it useful in data science?\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Data encoding is the process of converting data from one form to another to make it usable in a particular system or application. It is a crucial step in data science as it helps to standardize data and make it more accessible for analysis.\n",
+    "\n",
+    "There are different types of data encoding methods, such as binary encoding, one-hot encoding, label encoding, and ordinal encoding. Each method has its own advantages and disadvantages depending on the type of data being encoded and the specific use case.\n",
+    "\n",
+    "One common use of data encoding in data science is in machine learning algorithms. Many machine learning models require numeric inputs, so data encoding is necessary to convert categorical data into numeric form. For example, if we have a dataset with categorical features such as color, size, and shape, we can use one-hot encoding to convert these features into binary values that can be used as inputs to a machine learning model.\n",
+    "\n",
+    "Another use of data encoding is to compress data, which can be useful for storing large datasets or transmitting data over a network. By encoding data in a more efficient way, we can reduce the amount of storage space or network bandwidth required to store or transmit the data.\n",
+    "\n",
+    "Overall, data encoding is a fundamental concept in data science that helps to prepare data for analysis and make it more accessible for use in various applications, including machine learning, data storage, and data transmission."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53fed8d0",
+   "metadata": {},
+   "source": [
+    "# Q2. What is nominal encoding? Provide an example of how you would use it in a real-world scenario.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Nominal encoding is a type of categorical data encoding that assigns a unique integer value to each category or level of a categorical variable. This encoding method is also known as label encoding, where each category is assigned a label or a numeric value.\n",
+    "\n",
+    "For example, suppose we have a dataset with a categorical feature called \"fruit,\" and it has three possible values: \"apple,\" \"orange,\" and \"banana.\" To perform nominal encoding, we would assign each of these values a unique integer value, such as 0 for \"apple,\" 1 for \"orange,\" and 2 for \"banana.\"\n",
+    "\n",
+    "One real-world scenario where nominal encoding can be useful is in sentiment analysis, which is a technique used to classify text data into positive, negative, or neutral sentiment. In this scenario, we might have a categorical feature called \"sentiment\" with three possible values: \"positive,\" \"negative,\" and \"neutral.\" We can use nominal encoding to assign a unique integer value to each of these categories.\n",
+    "\n",
+    "Then, we can feed this encoded data into a machine learning model to predict the sentiment of new text data. The model can use these encoded values as inputs and learn to classify the text data based on the assigned numeric labels.\n",
+    "\n",
+    "In summary, nominal encoding is a simple and efficient method to convert categorical data into numerical data that can be used as inputs to a machine learning model. It is commonly used in various applications, including sentiment analysis, recommendation systems, and image classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6098a943",
+   "metadata": {},
+   "source": [
+    "# Q3. In what situations is nominal encoding preferred over one-hot encoding? Provide a practical example.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "Nominal encoding and one-hot encoding are both methods used to encode categorical data into numerical data. Nominal encoding assigns a unique integer value to each category of a categorical variable, whereas one-hot encoding creates a binary vector for each category, where each element of the vector represents the presence or absence of that category.\n",
+    "\n",
+    "Nominal encoding is preferred over one-hot encoding in situations where the categorical variable has a large number of categories or levels. One-hot encoding can create a very large number of binary features, which can lead to the curse of dimensionality, where the number of features grows much faster than the number of observations, making the analysis computationally expensive and prone to overfitting.\n",
+    "\n",
+    "For example, suppose we have a dataset of customer transactions, where the categorical variable is \"product_category\" with 100 possible values. One-hot encoding this variable would create 100 binary features, each representing a product category, which could be computationally expensive and could lead to overfitting in the analysis.\n",
+    "\n",
+    "In this scenario, nominal encoding would be a preferred encoding method. We can assign a unique integer value to each product category, such as 1 to 100, and use this encoded data as input to a machine learning model. This would reduce the number of features to 1, which is the number of variables required to represent the categorical variable.\n",
+    "\n",
+    "In summary, nominal encoding is preferred over one-hot encoding in situations where the categorical variable has a large number of categories or levels. It is a more efficient encoding method that can reduce the number of features and make the analysis more computationally feasible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "997c011d",
+   "metadata": {},
+   "source": [
+    "# Q4. Suppose you have a dataset containing categorical data with 5 unique values. Which encoding technique would you use to transform this data into a format suitable for machine learning algorithms? Explain why you made this choice.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "The choice of encoding technique depends on the specific characteristics of the categorical data, such as the number of unique values, the type of categories, and the requirements of the machine learning algorithm being used.\n",
+    "\n",
+    "If the categorical data contains 5 unique values, one-hot encoding is a suitable technique to transform the data into a format suitable for machine learning algorithms. One-hot encoding creates a binary vector for each unique category, where each element of the vector represents the presence or absence of that category.\n",
+    "\n",
+    "For example, suppose we have a categorical variable called \"color,\" with 5 possible values: \"red,\" \"blue,\" \"green,\" \"yellow,\" and \"orange.\" We can use one-hot encoding to transform this variable into binary vectors, as follows:\n",
+    "\n",
+    "    Color\tRed\t Blue Green Yellow Orange\n",
+    "    Red\t    1\t 0\t   0\t  0\t    0\n",
+    "    Blue\t   0\t 1\t   0\t  0\t    0\n",
+    "    Green\t  0\t 0\t   1\t  0\t    0\n",
+    "    Yellow\t 0\t 0\t   0\t  1\t    0\n",
+    "    Orange\t 0\t 0\t   0\t  0\t    1\n",
+    "The resulting binary vectors can be used as input to a machine learning algorithm, where each vector represents a feature that indicates the presence or absence of a specific color.\n",
+    "\n",
+    "In summary, one-hot encoding is a suitable encoding technique for categorical data with 5 unique values. It creates a binary vector for each unique category, which can be used as input to a machine learning algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b287507b",
+   "metadata": {},
+   "source": [
+    "# Q5. In a machine learning project, you have a dataset with 1000 rows and 5 columns. Two of the columns are categorical, and the remaining three columns are numerical. If you were to use nominal encoding to transform the categorical data, how many new columns would be created? Show your calculations.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "If we use nominal encoding to transform the two categorical columns, we will replace each category with a unique integer value. The number of new columns created will depend on the number of unique categories in each categorical column.\n",
+    "\n",
+    "Suppose the first categorical column has 4 unique categories, and the second categorical column has 5 unique categories. Then, we will replace the first categorical column with 4 new columns and the second categorical column with 5 new columns, resulting in a total of 9 new columns.\n",
+    "\n",
+    "Therefore, if we use nominal encoding to transform the two categorical columns, 9 new columns will be created, and the resulting dataset will have a total of 8 columns (3 original numerical columns + 9 new columns from nominal encoding = 12 total columns)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6433a0d",
+   "metadata": {},
+   "source": [
+    "# Q6. You are working with a dataset containing information about different types of animals, including their species, habitat, and diet. Which encoding technique would you use to transform the categorical data into a format suitable for machine learning algorithms? Justify your answer.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "The choice of encoding technique for transforming categorical data into a format suitable for machine learning algorithms depends on the specific characteristics of the data, such as the number of unique categories, the type of categories, and the requirements of the machine learning algorithm being used.\n",
+    "\n",
+    "In this case, since the dataset contains information about different types of animals, it is likely that the categorical variables have multiple levels or categories. One-hot encoding is a suitable technique to transform this type of data into a format suitable for machine learning algorithms.\n",
+    "\n",
+    "One-hot encoding creates a binary vector for each unique category, where each element of the vector represents the presence or absence of that category. This technique is useful for variables with multiple categories because it avoids assigning arbitrary values to the categories, which could introduce bias or confusion in the analysis.\n",
+    "\n",
+    "For example, suppose we have a categorical variable called \"habitat\" with 5 possible values: \"forest,\" \"desert,\" \"ocean,\" \"grassland,\" and \"tundra.\" We can use one-hot encoding to transform this variable into binary vectors, as follows:\n",
+    "\n",
+    "    Habitat\tForest\tDesert\tOcean\tGrassland\tTundra\n",
+    "    Forest\t  1\t      0\t      0\t       0\t      0\n",
+    "    Desert\t  0\t      1\t      0\t       0\t      0\n",
+    "    Ocean\t   0\t      0\t      1\t       0\t      0\n",
+    "    Grassland   0\t      0\t      0\t       1\t      0\n",
+    "    Tundra\t  0\t      0\t      0\t       0\t      1\n",
+    "The resulting binary vectors can be used as input to a machine learning algorithm, where each vector represents a feature that indicates the presence or absence of a specific habitat.\n",
+    "\n",
+    "Therefore, in this case, I would use one-hot encoding to transform the categorical data into a format suitable for machine learning algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7829119",
+   "metadata": {},
+   "source": [
+    "# Q7.You are working on a project that involves predicting customer churn for a telecommunications company. You have a dataset with 5 features, including the customer's gender, age, contract type, monthly charges, and tenure. Which encoding technique(s) would you use to transform the categorical data into numerical data? Provide a step-by-step explanation of how you would implement the encoding.\n",
+    "\n",
+    "## Ans. :\n",
+    "\n",
+    "To transform the categorical data into numerical data for the customer churn prediction project, we can use a combination of nominal encoding and one-hot encoding.\n",
+    "\n",
+    "__Here are the steps to implement the encoding:__\n",
+    "\n",
+    "__1. Identify the categorical variables:__ In this case, the categorical variables are the customer's gender and contract type.\n",
+    "\n",
+    "__2. Nominal Encoding:__ We can use nominal encoding to convert the categorical variables into numerical data by assigning a unique integer value to each category. For example, we can assign 0 to \"Female\" and 1 to \"Male\" for the gender variable and 0 to \"Month-to-month,\" 1 to \"One year,\" and 2 to \"Two year\" for the contract type variable.\n",
+    "\n",
+    "__3. One-hot Encoding:__ We can use one-hot encoding to create binary vectors for the nominal encoded variables. For example, after nominal encoding, the gender variable would have values of 0 or 1. We can create two binary vectors, one for \"Female\" and one for \"Male,\" where each vector represents the presence or absence of that gender.\n",
+    "\n",
+    "__4. Combine the encoded variables:__ We can combine the nominal encoded variables and the one-hot encoded variables into a single dataset. The resulting dataset will have numerical data that can be used for machine learning algorithms."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
